add buttons & some css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,58 @@
       </div>
    </header>
 
+   <main class="site-main">
 
+    <section class="site-banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 site-title">
+            <h3 class="title-text">Hey</h3>
+            <h1 class="title-text text-uppercase">I am Victoria</h1>
+            <h4 class="title-text text-uppercase">JavaScript trainee</h4> 
+            <div class="site-buttons">
+              <div class="d-flex flex-row flex-wrap">
+                <button type="button" class="btn button primary-button mr-4 text-uppercase">hire me</button>
+                <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12 banner-image">
+            <img src="./img/banner/banner-image.png" alt="banner-image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <sectio class="about-area">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-6 col-md-12">
+            <div class="about-image">
+              <img src="./img/about-us.png" alt="About us" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-12">
+            <h2 class="text-uppercase">
+              <span>Let me</span>
+              <span>introduce</span>
+              <span>myself</span>
+            </h2>
+            <div class="paragraph py-4 w-75">
+              <p class="para">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi optio maiores magnam voluptates dolores placeat molestiae adipisci autem numquam laboriosam!
+              </p>
+              <p class="para">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, pariatur quo exercitationem illo rerum in nihil dolorum aperiam quas placeat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque architecto, temporibus optio alias vitae vel ex! Rem consequuntur ducimus nisi!
+              </p>
+            </div>
+            <button class="btn button primary-button text-uppercase">Download cv</button>
+          </div>
+        </div>
+      </div>
+    </sectio>
+
+   </main>
 
    <script src="./js/jquery.3.4.1.js"></script>
    <script src="./js/bootstrap.min.js"></script>
